# ein

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
ein/: __init__.py  axial.py  axial_calculus.py  calculus.py  comprehension.py  debug.py  interpret.py  node.py  symbols.py  tensor.py  term.py  to_axial.py  to_numpy.py  to_pure_axial.py  type_system.py  value.py
ein/backend/: __init__.py  array_backend.py  array_calculus.py  array_indexing.py  arrays.py  axial.py  axial_calculus.py  jax_backend.py  naive.py  node.py  numpy_backend.py  staged.py  to_array.py  to_axial.py  to_numpy.py  to_torch.py  torch_backend.py
ein/codegen/: __init__.py  array_indexing.py  axial.py  phi_to_yarr.py  yarr.py
ein/debug/: __init__.py  graph.py  pprint.py
ein/frontend/: __init__.py  comprehension.py  functions.py  layout.py  ndarray.py  std.py  stub.py  tensor.py  typed.py
ein/midend/: __init__.py  equiv.py  lining.py  size_classes.py  structs.py  substitution.py
ein/phi/: __init__.py  calculus.py  phi.py  type_system.py
tests/: __init__.py  test_calculus.py  test_cases.py  test_core.py  test_extrinsics.py  test_interpret.py  test_jax.py  test_main.py  test_structs.py  test_tensor.py  test_torch.py
tests/suite/: __init__.py  case.py
tests/suite/deep/: __init__.py  attention.py  gat.py
tests/suite/misc/: __init__.py  mandelbrot.py  multidual.py  semiring.py
tests/suite/parboil/: __init__.py  mri_q.py  stencil.py
tests/suite/rodinia/: __init__.py  hotspot.py  kmeans.py  nn.py  (+1 more)
tools/: benchmark.py  cloc_table.py
tools/benchmark/: benchmark.py
