[tool.poetry]
name = "ein"
version = "0.0.0"
description = "Embedding Pointful Array Programming in Python"
authors = ["jbachurski <kbachurski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.*"
numpy = "^1.26.0"
networkx = "^3.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
ipython = "^8.16.1"
black = "^23.9.1"
coverage = "^7.3.2"
mypy = "^1.6.0"
ruff = "^0.0.292"
scipy = "^1.11.3"
pydot = "^1.4.2"
seaborn = "^0.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.ruff]
ignore = ["E501", "E741"]

[tool.mypy]
check_untyped_defs = true
